# fetch-video-data-ytb

./: .gitignore  README.md  pyproject.toml
app/: cli.py  main.py
app/models/: playlist.py  track_item.py
app/services/: export_service.py  metadata_parser.py  playlist_extractor.py
app/utils/: logging_utils.py  text_normalizer.py  validators.py
tests/: test_export_service.py  test_metadata_parser.py  test_validators.py
