[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fetch-video-data-ytb"
version = "0.1.0"
description = "Extract and persist YouTube playlist metadata to local JSON files"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
